# poke-rs

./: .deepsource.toml  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_CRITIQUE.md  CONTRIBUTING_COMMENTS.md  Cargo.toml  INSTRUCTION.md  TEST_REPORT.md  agents.md  evaluation.md  example.txt  fix_all_checksums.py  fix_checksums.py  output.txt  package-lock.json  package.json  references.md  temp_test.rs
.baseline/: test_results.json
crates/poke_engine/: Cargo.toml  build.rs
crates/poke_engine/benches/: damage_calc.rs  state_clone.rs  state_layout.rs
crates/poke_engine/docs/entities/: pokemon-state.md  sides-and-players.md
crates/poke_engine/docs/mechanics/: abilities.md  battle-rules.md  damage-calculation.md  field-effects.md  generation-diffs.md  generational-gimmicks.md  items.md  moves-and-targeting.md  stats.md  status-conditions.md  turn-order.md  types-and-matchups.md
crates/poke_engine/src/: core_data.rs  entities.rs  lib.rs  main.rs  state.rs
crates/poke_engine/src/abilities/: hooks.rs  mod.rs  registry.rs  tests.rs  weather.rs
crates/poke_engine/src/abilities/implementations/: damage_modifiers.rs  final_modifiers.rs  immunity.rs  intimidate.rs  mod.rs  multitype.rs  parental_bond.rs  priority.rs  speed.rs  stat_modifiers.rs  status.rs  type_changers.rs  weather_setters.rs  weight_modifiers.rs
crates/poke_engine/src/damage/: ate_tests.rs  conditional_moves_tests.rs  context.rs  effectiveness.rs  formula.rs  missing_implementations_test.rs  mod.rs  modifier.rs  modifiers.rs  mold_breaker_tests.rs  parental_bond_tests.rs  pipeline.rs  scrappy_tests.rs  special_moves.rs  special_moves_tests.rs
crates/poke_engine/src/items/: hooks.rs  implementations.rs  mod.rs  registry.rs
crates/poke_engine/src/moves/: hooks.rs  implementations.rs  mod.rs  registry.rs
crates/poke_engine/tests/: crit_correctness.rs  damage_calc_test.rs  damage_fixtures.rs  multitype_correctness.rs
crates/poke_engine/tests/common/: categories.rs  fixtures.rs  helpers.rs  mod.rs  skip_list.rs
crates/poke_engine_codegen/: Cargo.toml
crates/poke_engine_codegen/src/: abilities.rs  helpers.rs  items.rs  lib.rs  models.rs  moves.rs  natures.rs  species.rs  terrains.rs  types.rs
(+56 files in other folders)
