[package]
name = "poke_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"] }
phf = "0.11"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
phf_codegen = "0.11"
