[package]
name = "poke_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = "0.11"

[build-dependencies]
poke_engine_codegen = { path = "../poke_engine_codegen" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
libtest-mimic = "0.8"

[lints.rust]
warnings = "allow"


[[bench]]
name = "damage_calc"
harness = false

[[bench]]
name = "state_clone"
harness = false

[[bench]]
name = "state_layout"
harness = false

[[bin]]
name = "fixture_runner"
path = "src/bin/fixture_runner.rs"

[[test]]
name = "damage_fixtures"
harness = false
