[package]
name = "poke_engine_codegen"
version = "0.1.0"
edition = "2021"
description = "Code generation for poke_engine - parses Showdown JSON data and generates Rust types"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
phf_codegen = "0.11"
